# MiLL_AI_BehaviorStudy

./: .gitignore  comfort_temp.py  data_about_guests.xlsx  data_acquisition.py  dynamic_energy_cost.py  eff_test_LSTM_finetuning.py  eff_test_LSTM_training.py  energy_wasted.py  interface_joint.py  lstm_model.pth  main.py  mqtt_publisher.py  passwords_gitignore.py  presence.py  requirements.txt  shower_time.py
AI_Testing_Edge/decision_tree/: build_tree.py  calculate-memory.py  main.c  prepare_data.py
AI_Testing_Edge/decision_tree/ESP/: ESP.ino  data.h
AI_Testing_Edge/decision_tree/RPI/: CMakeLists.txt  main.c
AI_Testing_Edge/decision_tree/STM/.metadata/: .log4j2.xml  version.ini
AI_Testing_Edge/decision_tree/STM/DT_STM/: .cproject  .mxproject  .project  DT_STM Debug.launch  DT_STM.ioc
AI_Testing_Edge/decision_tree/STM/DT_STM/Core/Src/: data.c  (+3 more)
AI_Testing_Edge/decision_tree/STM/DT_STM/Debug/: DT_STM.elf  DT_STM.list  DT_STM.map  makefile  objects.list
AI_Testing_Edge/naive_bayes/: build_nb.py  config.c  config.h  data.c  nb_run.c
AI_Testing_Edge/naive_bayes/ESP/: ESP.ino  config.c
AI_Testing_Edge/naive_bayes/RPI/: CMakeLists.txt  main.c
AI_Testing_Edge/naive_bayes/STM/BayesSTM/: .cproject  .project  BayesSTM Debug.launch  BayesSTM.ioc
AI_Testing_Edge/naive_bayes/STM/BayesSTM/Debug/: BayesSTM.elf  BayesSTM.list  BayesSTM.map  makefile  objects.list
AI_Testing_Edge/neural_network/: build_nn.py  convert2micro.py  func.c  func.h  get_weights.py  model.h  model.h5  model.keras  model.tflite  nn_run.c  weights.c  weights.h
AI_Testing_Edge/neural_network/ESP/: ESP.ino  data.c  data.h  func.c  func.h  weights.c  weights.h
AI_Testing_Edge/neural_network/RPI/: CMakeLists.txt  data.c  data.h  main.c
AI_Testing_Edge/neural_network/STM/NN_STM/: .cproject  .mxproject  .project  NN_STM Debug.launch  NN_STM.ioc  STM32F334R8TX_FLASH.ld
AI_Testing_Edge/neural_network/STM/NN_STM/.ai/: network_model.tflite_c_graph.json  network_model.tflite_c_info.json  network_model.tflite_report.json
AI_Testing_Edge/neural_network/STM/NN_STM/Debug/: NN_STM.elf  NN_STM.list  NN_STM.map  makefile  objects.list
AI_Testing_Edge/neural_network/STM/NN_STM/EWARM/: NN_STM.ewd  NN_STM.ewp  Project.eww  stm32f334x8_flash.icf
IoT_System/: ML_predictions.py  README.md  comfort_temp.py  data_acquisition.py  dynamic_energy_cost.py  energy_wasted.py  interface_joint.py  main.py  mqtt_publisher.py  presence.py  shower_time.py
IoT_System/data_collection/: error_logs.txt  iterations_logs.csv  performance.txt
IoT_System/data_collection/56/: iterations_logs.csv
IoT_System/data_collection/history/: 2024_11_12_iterations_logs_without_energy.csv
LSTM_tests_on_edge/: eff_test_LSTM_inference.py
ML_people_counter/: ML_model.py  classifier.py  data_acquisition.py  data_prep.py  data_prep_classifier.py  prepared_data.csv  prepared_data_for_classifier.csv  trained_people_counter_model.pth
ML_visit_purpose/: data_prep.py  prepared_data.csv
data_collection/: iterations_logs.csv  performance.txt
data_collection/56/: iterations_logs.csv
datasets_creating/ML_people_counter/: ML_model.py  data_prep_more_freq.py  trained_presence_classifier_model.pth
datasets_creating/ML_visit_purpose/: data_prep.py
(+58 files in other folders)
